templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: toducze-test
spec:
    replicas: 1
    selector:
      matchLabels:
        app: postgres
    template:
      metadata:
        labels:
          app: postgres
      spec:
        containers:
          - name: postgres
            image: postgres:10.1
            imagePullPolicy: "IfNotPresent"
            ports:
              - containerPort: 5432
            volumeMounts:
               - mountPath: /var/lib/postgresql/data
                 name: postgredb
        volumes:
          - name: postgredb
            persistentVolumeClaim:
              claimName: postgres-pv-claim
