templates/postgras-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: postgres
   labels:
     app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
