templates/server.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: toducze-test
  name: rest-api-dotnet-service
spec:
  selector:
    app: rest-api-dotnet
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
